# android-app-test

./: .gitignore  .project  AndroidManifest.xml  README.md  build.gradle  keystore.properties  settings.gradle  version.gradle  versions.gradle
app/: build.gradle  platform.keystore
app/src/androidTest/java/com/example/test/: ApplicationTest.java  ExampleInstrumentedTest.java  ExampleUiautomatorInstrumentedTest.kt
app/src/androidTest/java/com/wangmuy/modulartest/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/wangmuy/mvvmtest/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/wangmuy/testempty/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello.wasm  index.html
app/src/main/java/com/example/test/: BasePresenter.java  BasePresenter.kt  BaseView.java  BaseView.kt  BorderView.java  ClipRectView.java  DrawDelayActivity.java  DrawDelayView.java  FloatingWindowService.java  Injection.kt  KeyframeAnimatorHelper.java  LayoutDelayActivity.java  LayoutDelayView.java  MainActivity.java  MeasureDelayActivity.java  MeasureDelayView.java  MyAccessibilityService.java  MyApplication.java  MyFrameLayout.java  MyItemAnimator.java  MySurfaceView.java  NativeUtils.java  ObservableField.java  OpenCVUtils.java  PostEchoServer.java  QueryState.java  RecyclerViewEx.java  RustLib.java  UseCase.java  UseCase.kt  WlanLabelTestCase.java
app/src/main/java/com/example/test/empty/: MyContract.java  MyFragment.java  MyMainActivity.java  MyPresenter.java
app/src/main/java/com/example/test/model/: Repo.java
app/src/main/java/com/example/test/network/: GitHubApi.java  Utils.java
app/src/main/java/com/example/test/tasks/: MainActivity.kt  TasksContract.kt  TasksFragment.kt  TasksInjection.kt  TasksPresenter.kt
app/src/main/java/com/example/test/util/: AppCompatActivityExt.kt  AppExecutors.kt
app/src/main/java/com/wangmuy/modulartest/: DIapp.kt  MainActivity.kt  MainApplication.kt
app/src/main/java/com/wangmuy/mvvmtest/: Const.java  MainActivity.kt
app/src/main/java/com/wangmuy/testempty/: MainActivity.kt  MainApplication.kt
app/src/main/jni/: Android.mk  CMakeLists.txt  com_example_test_NativeUtils.cpp  com_example_test_NativeUtils.h
app/src/main/jni/rust/: Cargo.toml  build.rs
app/src/main/jni/rust/.cargo/: config
app/src/main/jni/rust/hello-world/: Cargo.toml  README.md
app/src/main/jni/rust/hello-world/examples/: callwasm.rs
app/src/main/jni/rust/hello-world/src/: lib.rs
app/src/main/jni/rust/src/: lib.rs  wasmedge.rs
app/src/main/res/drawable/: bg_border.xml  gradient_from_corner.xml  item_image_bg.xml
app/src/main/res/layout/: activity_main.xml  draw_delay.xml  layout_delay.xml  list_item.xml  measure_delay.xml  my_activity_main.xml  my_frag.xml  tasks_activity_main.xml  tasks_frag.xml  tasks_item.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: myaccessibilityservice.xml
app/src/prod/java/com/example/test/: Injection.java
app/src/test/java/com/example/test/: ExampleUnitTest.java
app/src/test/java/com/wangmuy/modulartest/: ExampleUnitTest.kt
app/src/test/java/com/wangmuy/mvvmtest/: ExampleUnitTest.kt
app/src/test/java/com/wangmuy/testempty/: ExampleUnitTest.kt
base/: build.gradle
base/src/main/java/com/wangmuy/modulartest/: Const.kt
base/src/main/java/com/wangmuy/testempty/: Const.java  DispatchersProvider.kt  Extensions.kt  IRepo.kt  Item.kt  RemoteRepo.kt
feat1/api/: build.gradle
feat1/di/: build.gradle
feat1/impl/: build.gradle
feat2/api/: build.gradle
feat2/di/: build.gradle
feat2/impl/: build.gradle
feat2/impl/src/main/: AndroidManifest.xml
feat3/api/: build.gradle
feat3/di/: build.gradle
feat3/implaar/: build.gradle  gradle.properties  settings.gradle
feat3/implaar/gradle/wrapper/: gradle-wrapper.properties
feat3/implaar/implaar/: build.gradle
feat32/di/: build.gradle
feat32/impl2aar/: build.gradle  settings.gradle
feat32/impl2aar/impl2aar/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
opencv/: .gitignore  build.gradle
res/values/: styles.xml
src/com/example/test/: MainActivity.java
(+89 files in other folders)
