[package]
name = "rustrocks"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z" # optimize for size
lto = true # link time optimization
panic = "abort"

[dependencies]
jni = "0.19.0"
wasmtime = {version = "0.35.0", default-features = false, features = ["async","async-trait","cache","cranelift","jitdump","parallel-compilation","rayon","vtune","wasmtime-cache","wasmtime-cranelift","wasmtime-fiber","wat"]}

[lib]
crate-type=["dylib"]
