[package]
name = "rustrocks"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z" # optimize for size
lto = true # link time optimization
panic = "abort"

[dependencies]
jni = "0.19.0"
wasmer = "2.2.1"
#wasmer = {version = "2.2.1", default-features = false, features = ["sys","sys-default"]}

[lib]
crate-type=["dylib"]
